examples/liqo/onlinebutique/istio_resources/destrule-Service-frontend-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-external
spec:
  host: frontend-external
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 30s
      consecutive5xxErrors: 7
      interval: 30s
