examples/liqo/onlinebutique/istio_resources/destrule-Service-recommendationservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendationservice
spec:
  host: recommendationservice
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 30s
      consecutive5xxErrors: 7
      interval: 30s
